Swagger: update comments
